avoid using column-gap as it is not widely supported

--- a/src/components/timekeeper/timekeeper.scss
+++ b/src/components/timekeeper/timekeeper.scss
@@ -84,7 +84,10 @@
     align-items: center;
     justify-content: center;
     margin-top: 2.5rem;
-    column-gap: 2rem;
+
+    & > * {
+      margin: 0 1rem;
+    }
   }
 
   & .timekeeper-buttons .iconify {
